--- a/index.html
+++ b/index.html
@@ -143,60 +143,249 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="hero-title">Sgomberi professionali a Catania e Sicilia orientale</h1>
-                <p class="hero-subtitle">Servizi rapidi e affidabili in tutta la Sicilia Orientale: Catania, Siracusa, Ragusa e Messina.</p>
+                <div class="hero-logo">
+                    <img src="public/OIG1-removebg-preview_1_-removebg-preview.png" alt="Logo Sgombero Catania" class="logo-img">
+                </div>
+                <h1 class="hero-title">Servizi di Sgombero Professionali a Catania</h1>
+                <p class="hero-subtitle">Esperti in sgomberi, traslochi e ritiro mobili usati. Operativi in tutta la provincia di Catania con professionalità e rapidità.</p>
                 <div class="cta-buttons">
                     <a href="tel:3497500613" class="btn btn-primary glass-ui">Chiama Ora</a>
                     <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary glass-ui">WhatsApp</a>
                 </div>
+                <div class="hero-badges">
+                    <div class="badge glass-ui">Oltre 8 anni di esperienza</div>
+                    <div class="badge glass-ui">Preventivi gratuiti</div>
+                    <div class="badge glass-ui">Disponibili 7 giorni su 7</div>
+                </div>
             </div>
         </section>
-        
-        <section class="section">
+
+        <section class="section partner-banner">
             <div class="container">
-                <h2>I Nostri Servizi</h2>
-                <p>Una rete di specialisti per ogni tua esigenza, dal piccolo sgombero al trasloco completo.</p>
-                <div class="services-grid">
-                    <div class="service-card glass-ui">
-                        <h3>🏠 Appartamenti</h3>
-                        <p>Svuotiamo appartamenti di ogni dimensione con rapidità e discrezione.</p>
-                        <a href="sgombero-case.html" class="btn-link">Scopri di più &rarr;</a>
-                    </div>
-                    <div class="service-card glass-ui">
-                        <h3>📦 Cantine e Garage</h3>
-                        <p>Liberiamo i tuoi spazi accessori da oggetti accumulati nel tempo.</p>
-                        <a href="sgombero-garage.html" class="btn-link">Scopri di più &rarr;</a>
-                    </div>
-                    <div class="service-card glass-ui">
-                        <h3>🚚 Traslochi Completi</h3>
-                        <p>Organizziamo traslochi "chiavi in mano" per un'esperienza senza stress.</p>
-                        <a href="trasporti-catania.html" class="btn-link">Scopri di più &rarr;</a>
-                    </div>
-                    <div class="service-card glass-ui">
-                        <h3>🏢 Uffici e Negozi</h3>
-                        <p>Interventi mirati, anche fuori orario, per non fermare la tua attività.</p>
-                        <a href="sgombero-uffici.html" class="btn-link">Scopri di più &rarr;</a>
-                    </div>
+                <div class="partner-box glass-ui">
+                    <h3>Partner ufficiale di</h3>
+                    <a href="https://www.sgomberocatania.it" target="_blank" rel="noopener" class="partner-link">sgomberocatania.it</a>
+                    <p>Scopri tutti i nostri servizi sul sito principale</p>
                 </div>
             </div>
         </section>
 
         <section class="section">
             <div class="container">
-                 <h2>Cosa Dicono di Noi</h2>
-                 <p>La soddisfazione dei nostri clienti è la nostra migliore pubblicità.</p>
+                <h2>I Nostri Servizi</h2>
+                <p>Soluzioni complete per ogni esigenza di sgombero e trasloco</p>
+                <div class="services-grid">
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">🏠</div>
+                        <h3>Sgombero Appartamenti</h3>
+                        <p>Svuotiamo appartamenti di ogni dimensione con rapidità e discrezione. Ci occupiamo di tutto, dalla rimozione alla pulizia finale.</p>
+                        <a href="sgombero-case.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">📦</div>
+                        <h3>Cantine e Garage</h3>
+                        <p>Liberiamo i tuoi spazi accessori da oggetti accumulati nel tempo. Servizio rapido ed efficiente.</p>
+                        <a href="sgombero-garage.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">🚚</div>
+                        <h3>Traslochi</h3>
+                        <p>Traslochi completi con personale esperto. Imballaggio, trasporto e montaggio mobili inclusi.</p>
+                        <a href="trasporti-catania.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">🏢</div>
+                        <h3>Uffici e Negozi</h3>
+                        <p>Interventi mirati per attività commerciali, anche fuori orario per non interferire con il lavoro.</p>
+                        <a href="sgombero-uffici.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">♻️</div>
+                        <h3>Ritiro Mobili Usati</h3>
+                        <p>Ritiriamo mobili e oggetti usati ancora in buono stato. In alcuni casi offriamo sgombero gratuito.</p>
+                        <a href="ritiro-mobili-usati-catania.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                    <div class="service-card glass-ui">
+                        <div class="service-icon">🏭</div>
+                        <h3>Capannoni</h3>
+                        <p>Sgombero di capannoni industriali e commerciali con mezzi adeguati e personale specializzato.</p>
+                        <a href="sgombero-capannoni.html" class="btn-link">Scopri di più &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section gallery-section">
+            <div class="container">
+                <h2>I Nostri Lavori</h2>
+                <p>Alcuni esempi dei servizi che realizziamo quotidianamente</p>
+                <div class="gallery-grid">
+                    <div class="gallery-item glass-ui">
+                        <img src="public/FB_IMG_1751329946558.jpg" alt="Sgombero appartamento Catania" loading="lazy">
+                    </div>
+                    <div class="gallery-item glass-ui">
+                        <img src="public/FB_IMG_1751329950718.jpg" alt="Trasloco mobili Catania" loading="lazy">
+                    </div>
+                    <div class="gallery-item glass-ui">
+                        <img src="public/FB_IMG_1751329954415.jpg" alt="Ritiro mobili usati" loading="lazy">
+                    </div>
+                    <div class="gallery-item glass-ui">
+                        <img src="public/FB_IMG_1751329960789.jpg" alt="Sgombero garage" loading="lazy">
+                    </div>
+                    <div class="gallery-item glass-ui">
+                        <img src="public/FB_IMG_1751329966898.jpg" alt="Trasloco completo" loading="lazy">
+                    </div>
+                    <div class="gallery-item glass-ui">
+                        <img src="public/IMG-20250619-WA0015.jpg" alt="Servizio sgombero" loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section why-us-section">
+            <div class="container">
+                <h2>Perché Sceglierci</h2>
+                <p>Professionalità e trasparenza al tuo servizio</p>
+                <div class="features-grid">
+                    <div class="feature-card glass-ui">
+                        <div class="feature-number">01</div>
+                        <h3>Esperienza Consolidata</h3>
+                        <p>Oltre 8 anni di attività con centinaia di clienti soddisfatti in tutta la provincia di Catania.</p>
+                    </div>
+                    <div class="feature-card glass-ui">
+                        <div class="feature-number">02</div>
+                        <h3>Preventivi Gratuiti</h3>
+                        <p>Sopralluogo e preventivo sempre gratuiti e senza impegno. Prezzi chiari e competitivi.</p>
+                    </div>
+                    <div class="feature-card glass-ui">
+                        <div class="feature-number">03</div>
+                        <h3>Servizio Rapido</h3>
+                        <p>Interveniamo rapidamente, spesso anche in giornata. Massima puntualità garantita.</p>
+                    </div>
+                    <div class="feature-card glass-ui">
+                        <div class="feature-number">04</div>
+                        <h3>Personale Qualificato</h3>
+                        <p>Team di professionisti esperti, attrezzature moderne e mezzi di trasporto adeguati.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section testimonials-section">
+            <div class="container">
+                 <h2>Cosa Dicono i Nostri Clienti</h2>
+                 <p>Recensioni autentiche da Google Business</p>
                 <div class="testimonials-grid">
                     <div class="testimonial-card glass-ui">
-                        <p>"Servizio eccellente! Veloci, professionali e onesti. Hanno sgomberato la cantina in meno di due ore. Incredibile!"</p>
-                        <cite>- Maria R., Catania</cite>
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Ho contattato il signor Strano per far sgomberare il mio appartamento da tutti i vecchi mobili. In 2 ore hanno fatto un ottimo lavoro. Professionali e affidabili."</p>
+                        <cite>- Mario Nicolosi</cite>
                     </div>
                     <div class="testimonial-card glass-ui">
-                        <p>"Finalmente un'azienda seria. Li ho chiamati per un trasloco e hanno gestito tutto alla perfezione, con cura e attenzione."</p>
-                        <cite>- Giuseppe T., Siracusa</cite>
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Ottimo servizio puntuali gentili e molto professionali."</p>
+                        <cite>- Andrea Ragusa</cite>
                     </div>
                     <div class="testimonial-card glass-ui">
-                        <p>"Consigliatissimi! Ho usufruito del servizio di sgombero gratuito e sono rimasto sbalordito dalla loro efficienza."</p>
-                        <cite>- Francesco M., Ragusa</cite>
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Mi sono rivolto al signor Francesco per un trasloco e mi sono trovato benissimo. Lo staff attento a tutti i dettagli. Hanno avuto massima cura per i miei mobili e ho trovato tutto montato perfettamente."</p>
+                        <cite>- Daniel Musumeci</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Ottima persona ottimo il servizio da consigliare"</p>
+                        <cite>- BookMe Cab srls</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Persone molto puntuali e organizzate... Del loro lavoro ne fanno un tesoro a chi li chiama e ne ha bisogno...risolvono con molta dimestichezza ogni incarico che gli viene chiesto.."</p>
+                        <cite>- Davide</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Ho avuto bisogno per motivi di traslochi ben tre volte di una ditta di fiducia e mi sono trovata benissimo sin dal primo trasloco! Gente seria e disponibile con prezzi bassi rispetto ad altre aziende. Ottimi servizi!"</p>
+                        <cite>- Laetitia D'Orazio</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Sono molto professionali e anche molto disponibili sono davvero il magnifici super!!"</p>
+                        <cite>- Nicolo' Müller</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Mi hanno risolto un grande problema ed oltretutto gratis"</p>
+                        <cite>- Anna Strano</cite>
+                    </div>
+                    <div class="testimonial-card glass-ui">
+                        <div class="stars">⭐⭐⭐⭐⭐</div>
+                        <p>"Persone competenti, gentili e capaci, soddisfatta."</p>
+                        <cite>- Mirella Conti</cite>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section coverage-section">
+            <div class="container">
+                <h2>Dove Operiamo</h2>
+                <p>Servizi di sgombero in tutta la provincia di Catania</p>
+                <div class="coverage-grid">
+                    <div class="coverage-card glass-ui">
+                        <h3>Catania e Hinterland</h3>
+                        <div class="comuni-list">
+                            <a href="catania.html">Catania</a>
+                            <a href="gravina_di_catania.html">Gravina di Catania</a>
+                            <a href="san_giovanni_la_punta.html">San Giovanni la Punta</a>
+                            <a href="tremestieri_etneo.html">Tremestieri Etneo</a>
+                            <a href="san_gregorio_di_catania.html">San Gregorio</a>
+                        </div>
+                    </div>
+                    <div class="coverage-card glass-ui">
+                        <h3>Zona Etna</h3>
+                        <div class="comuni-list">
+                            <a href="nicolosi.html">Nicolosi</a>
+                            <a href="pedara.html">Pedara</a>
+                            <a href="trecastagni.html">Trecastagni</a>
+                            <a href="zafferana_etnea.html">Zafferana Etnea</a>
+                            <a href="viagrande.html">Viagrande</a>
+                        </div>
+                    </div>
+                    <div class="coverage-card glass-ui">
+                        <h3>Costa Ionica</h3>
+                        <div class="comuni-list">
+                            <a href="acireale.html">Acireale</a>
+                            <a href="aci_castello.html">Aci Castello</a>
+                            <a href="aci_catena.html">Aci Catena</a>
+                            <a href="aci_santantonio.html">Aci Sant'Antonio</a>
+                            <a href="giarre.html">Giarre</a>
+                        </div>
+                    </div>
+                    <div class="coverage-card glass-ui">
+                        <h3>Zona Ovest</h3>
+                        <div class="comuni-list">
+                            <a href="paterno.html">Paternò</a>
+                            <a href="adrano.html">Adrano</a>
+                            <a href="belpasso.html">Belpasso</a>
+                            <a href="mascalucia.html">Mascalucia</a>
+                            <a href="camporotondo_etneo.html">Camporotondo Etneo</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="coverage-cta">
+                    <a href="dove-operiamo.html" class="btn btn-primary glass-ui">Vedi tutti i comuni serviti</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="section cta-section">
+            <div class="container">
+                <div class="cta-box glass-ui">
+                    <h2>Hai bisogno di un preventivo?</h2>
+                    <p>Contattaci subito per un sopralluogo gratuito e senza impegno</p>
+                    <div class="cta-buttons">
+                        <a href="tel:3497500613" class="btn btn-primary glass-ui">📞 Chiama 349 750 0613</a>
+                        <a href="https://wa.me/393497500613" target="_blank" class="btn btn-secondary glass-ui">💬 Scrivici su WhatsApp</a>
+                        <a href="contatti.html" class="btn glass-ui" style="background: rgba(255,255,255,0.3);">✉️ Invia una richiesta</a>
                     </div>
                 </div>
             </div>
